--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,9 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
+    "@types/swagger-ui-express": "^4.1.8",
     "jest": "^29.7.0",
+    "openapi-types": "^12.1.3",
     "prisma": "^5.7.1",
     "ts-jest": "^29.1.1",
     "tsx": "^4.7.0",
