--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,8 +14,17 @@ OPENING_TIME=11:00
 CLOSING_TIME=22:00
 
 # Email (placeholder)
-SMTP_HOST=smtp.example.com
+# For Gmail:
+# 1. Enable 2-factor authentication on your Google account
+# 2. Generate an App Password: https://myaccount.google.com/apppasswords
+# 3. Use these settings:
+SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=
-SMTP_PASS=
-FROM_EMAIL=reservations@restaurant.com
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password-here
+FROM_EMAIL=your-email@gmail.com
+
+# For other providers:
+# - Outlook: smtp.office365.com:587
+# - Yahoo: smtp.mail.yahoo.com:587
+# - SendGrid: smtp.sendgrid.net:587
