--- a/backend/package.json
+++ b/backend/package.json
@@ -20,9 +20,11 @@
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
+    "@types/nodemailer": "^7.0.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "nodemailer": "^7.0.11",
     "swagger-ui-express": "^5.0.1",
     "zod": "^3.22.4"
   },
