--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemailer": "^7.0.11",
+    "resend": "^6.6.0",
     "swagger-ui-express": "^5.0.1",
     "zod": "^3.22.4"
   },
